Finished Mom's Shopping List

--- a/Projects/Module 1/moms-shopping-list-start/index.html
+++ b/Projects/Module 1/moms-shopping-list-start/index.html
@@ -18,14 +18,14 @@
                 <div class = "formdiv">
                     <form name = "form1">
                         <input type="text" name = "itemChoice">
-                        <button class="datbutton">
+                        <button class="datbutton" type="submit">
                             Submit
                         </button> 
                     </form>
                 </div>
                 <h4 class = "item-name"> Item Name</h4>
-                <h2 class = "list-of-items"> List of Items</h2>
-                <button class = "delete"> Delete </button>
+                <h2 id = "list-of-items"> List of Items</h2>
+                
                 
             </div>
     <script src="index.js"> </script>
