--- a/Projects/module-2/mario-pest-control/index.html
+++ b/Projects/module-2/mario-pest-control/index.html
@@ -29,11 +29,11 @@
                 <div>
                 <div>
                     <img  class = "image" src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/fa6dacda-3f2c-49cb-81c5-3664f75187ff/ddh4xdq-c0887dc4-1485-4f2a-a579-996c94d91bf7.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvZmE2ZGFjZGEtM2YyYy00OWNiLTgxYzUtMzY2NGY3NTE4N2ZmXC9kZGg0eGRxLWMwODg3ZGM0LTE0ODUtNGYyYS1hNTc5LTk5NmM5NGQ5MWJmNy5wbmcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.5ttILbKtlHFdTGbFKDNLX_hw_AYBoLvHGOkvxNc-JN8"/>
-                    Bob-Ombs: <input name="bobombs" type = text/>
+                    Bob-Ombs: <input name="bombombs" type = text/>
                 </div> 
                 <div id=cheepdiv >
                     <img class = "image" src="https://i.ebayimg.com/images/g/y1sAAOSwFqpc4b4E/s-l300.jpg"/>
-                    Cheep-Cheeps: <input name="cheepcheep" type = text/>
+                    Cheep-Cheeps: <input name="cheepcheeps" type = text/>
                     <button name="button">Submit</button>
                 </div>
                 <br /><br /><br /><br />
